[gd_scene load_steps=2 format=3 uid="uid://7higbqok4274"]

[ext_resource type="Script" uid="uid://dcyi6hiaqca0h" path="res://hud.gd" id="1_k5de2"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_k5de2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PartsLabel" type="Label" parent="Control"]
offset_left = 29.0
offset_top = 6.0
offset_right = 254.0
offset_bottom = 61.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 78.0
offset_right = 182.0
offset_bottom = 139.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="WinPanel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 295.0
offset_top = 213.0
offset_right = 845.0
offset_bottom = 423.0

[node name="WinLabel" type="Label" parent="Control/WinPanel"]
layout_mode = 0
offset_left = 149.0
offset_top = 37.0
offset_right = 385.0
offset_bottom = 125.0

[node name="Buttons" type="HBoxContainer" parent="Control/WinPanel"]
layout_mode = 0
offset_left = 201.116
offset_top = 144.975
offset_right = 312.116
offset_bottom = 184.975

[node name="RestartBtn" type="Button" parent="Control/WinPanel/Buttons"]
layout_mode = 2
text = "Restart"

[node name="QuitBtn" type="Button" parent="Control/WinPanel/Buttons"]
layout_mode = 2
text = "Quit"

[node name="LosePanel" type="Panel" parent="Control"]
visible = false
layout_mode = 0
offset_left = 297.0
offset_top = 210.0
offset_right = 857.0
offset_bottom = 421.0

[node name="LoseLabel" type="Label" parent="Control/LosePanel"]
layout_mode = 0
offset_left = 152.0
offset_top = 30.0
offset_right = 380.0
offset_bottom = 117.0

[node name="Buttons" type="HBoxContainer" parent="Control/LosePanel"]
layout_mode = 0
offset_left = 206.876
offset_top = 156.824
offset_right = 317.876
offset_bottom = 196.824

[node name="RestartBtn2" type="Button" parent="Control/LosePanel/Buttons"]
layout_mode = 2
text = "Restart"

[node name="QuitBtn2" type="Button" parent="Control/LosePanel/Buttons"]
layout_mode = 2
text = "Quit"
